--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1,5 +1,105 @@
 % Encoding: UTF-8
 
+@InProceedings{sorianoLREC,
+  author = {Edmundo-Pavel Soriano-Morales and Julien Ah-Pine and Sabine Loudcher},
+  title = {Hypergraph Modelization of a Syntactically Annotated English Wikipedia Dump},
+  booktitle = {Proceedings of the Tenth International Conference on Language Resources and Evaluation (LREC 2016)},
+  year = {2016},
+  month = {may},
+  date = {23-28},
+  location = {Portorož, Slovenia},
+  publisher = {European Language Resources Association (ELRA)},
+  isbn = {978-2-9517408-9-1},
+  language = {english}}
+
+
+@inproceedings{sorianoCICLING,
+author = {Soriano-Morales, Edmundo-Pavel and Ah-Pine, Julien and Loudcher, Sabine},
+title = {Using a Heterogeneous Linguistic Network for
+Word Sense Induction and Disambiguation},
+booktitle= {Proceedings of the 17th International Conference on Intelligent Text Processing and Computational Linguistics (CICLING)},
+year= {2016},
+}
+
+@inproceedings{sorianoEGCChallenge,
+  author    = {Adrien Guille and
+               Edmundo{-}Pavel Soriano{-}Morales and
+               Ciprian{-}Octavian Truica},
+  title     = {Topic modeling and hypergraph mining to analyze the {EGC} conference
+               history},
+  booktitle = {16{\`{e}}me Journ{\'{e}}es Francophones Extraction et Gestion
+               des Connaissances, {EGC} 2016, 18-22 Janvier 2016, Reims, France},
+  pages     = {383--394},
+  year      = {2016},
+  url       = {http://editions-rnti.fr/?inprocid=1002191},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{sorianoEGCTOM,
+  author    = {Adrien Guille and
+               Edmundo{-}Pavel Soriano{-}Morales},
+  title     = {{TOM:} {A} library for topic modeling and browsing},
+  booktitle = {16{\`{e}}me Journ{\'{e}}es Francophones Extraction et Gestion
+               des Connaissances, {EGC} 2016, 18-22 Janvier 2016, Reims, France},
+  pages     = {451--456},
+  year      = {2016},
+  url       = {http://editions-rnti.fr/?inprocid=1002199},
+  timestamp = {Fri, 22 Jan 2016 10:19:37 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/f-egc/GuilleS16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{sorianoJournal,
+  author    = {Loudcher, Sabine and Jakawat, Wararat and  Soriano{-}Morales, Edmundo{-}Pavel and
+               Favre, C{\'{e}}cile},
+  title     = {Combining {OLAP} and information networks for bibliographic data analysis:
+               a survey},
+  journal   = {Scientometrics},
+  volume    = {103},
+  number    = {2},
+  pages     = {471--487},
+  year      = {2015},
+  url       = {http://dx.doi.org/10.1007/s11192-015-1539-0},
+  doi       = {10.1007/s11192-015-1539-0},
+  timestamp = {Sat, 18 Apr 2015 13:51:29 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/scientometrics/LoudcherJSF15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{soriano6,
+  author    = {Carlos{-}Francisco M{\'{e}}ndez{-}Cruz and
+               Edmundo{-}Pavel Soriano{-}Morales and
+               Alfonso Medina Urrea},
+  title     = {Testing a Statistical Word Stemmer based on Affixality Measurements
+               in {INEX} 2012 Tweet Contextualization Track},
+  booktitle = {{CLEF} 2012 Evaluation Labs and Workshop, Online Working Notes, Rome,
+               Italy, September 17-20, 2012},
+  year      = {2012},
+}
+
+@inproceedings{Ah-PineS16DMNLP,
+  author    = {Julien Ah{-}Pine and
+               Edmundo{-}Pavel Soriano{-}Morales},
+  title     = {A Study of Synthetic Oversampling for Twitter Imbalanced Sentiment
+               Analysis},
+  booktitle = {DMNLP@PKDD/ECML},
+  series    = {{CEUR} Workshop Proceedings},
+  volume    = {1646},
+  pages     = {17--24},
+  publisher = {CEUR-WS.org},
+  year      = {2016}
+}
+@inproceedings{sorianoDS,
+  author    = {Edmundo-Pavel Soriano-Morales and Julien Ah-Pine and Sabine Loudcher},
+  title     = {Fusion Techniques for Named Entity Recognition and Word Sense Induction and Disambiguation},
+  booktitle = {{International Conference on Discovery Science (DS 2017)}},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {To appear},
+  year      = {2017}
+}
+
+
+
 @article{garten2010recent,
   title={Recent progress in automatically extracting information from the pharmacogenomic literature},
   author={Garten, Yael and Coulet, Adrien and Altman, Russ B},
@@ -167,7 +267,6 @@
                Edition},
   edition = {3rd},              
   year      = {2017}
-addendum={Draft on webpage at https://web.stanford.edu/~jurafsky/slp3/}
 }
 
 @article{bengio2003neural,
