--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -16,6 +16,8 @@
 
 
 \usepackage[left=1.3in,right=1.2in,top=1.1in,bottom=1.1in,includefoot,includehead,headheight=13.6pt]{geometry}
+%\parindent 0pt
+%\parskip 1ex
 \renewcommand{\baselinestretch}{1.33}
 
 % Table of contents for each chapter
@@ -105,6 +107,7 @@ urlcolor=linkcol %couleur des liens pour les url
 }
 \usepackage{forest} 
 \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+
 % definitions.
 % -------------------
 
